# cuda_for_ai

./: .gitignore  CMakeLists.txt  README.md
benchmarks/row_max/: benchmark_row_max.py
benchmarks/softmax/: benchmark_softmax.py
benchmarks/softmax/reference_implementations/: triton_fused_softmax.py
src/softmax/: basic_softmax.cu  basic_softmax.cuh  row_reductions.cu  row_reductions.cuh  shmem_softmax.cu  shmem_softmax.cuh
src/tests/: test_row_reductions.cpp  test_softmax.cpp
